@@ -4,6 +4,7 @@ Knot Resolver 1.3.2 (2017-07-xx)
 Bugfixes
 --------
 - daemon: check existence of config file even if rundir isn't specified
+- policy.FORWARD and STUB: use RTT tracking to choose servers (#125, #208)
 
 
 Knot Resolver 1.3.1 (2017-06-23)
